syntax = "proto3";

option go_package = "../pb;pb";

import "common.proto";
import "user.proto";

// protoc --go_out=. video.proto

service VideoService {
  // 视频流
  rpc GetFeedList(GetFeedListRequest) returns (GetFeedListResponse);
  // 获取用户发布的视频
  rpc GetPublishVideoList(GetPublishVideoListRequest) returns (GetPublishVideoListResponse);
  // 发布视频
  rpc PublishVideo(PublishVideoRequest) returns (PublishVideoResponse);
  // 根据视频id，获取视频信息
  rpc GetVideoInfoList(GetVideoInfoListReq) returns (GetVideoInfoListRsp);
  // 获取用户点赞/喜欢的视频列表
  rpc GetFavoriteVideoList(GetFavoriteVideoListReq) returns (GetFavoriteVideoListRsp);
  // 更新这个视频的获赞数
  rpc UpdateFavoriteCount(UpdateFavoriteCountReq) returns (UpdateFavoriteCountRsp);
  // 更新这个视频的评论数
  rpc UpdateCommentCount(UpdateCommentCountReq) returns (UpdateCommentCountRsp);
}

message VideoInfo {
  int64 id = 1; // 视频唯一标识
  int64 author_id = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址​
  int64 favorite_count = 5; // 视频的点赞总数​
  int64 comment_count = 6; // 视频的评论总数​
  bool is_favorite = 7; // true-已点赞，false-未点赞​
  string title = 8; //视频标题
}

// ******************
message UpdateFavoriteCountReq {
  int64 video_id = 1;
  int64 action_type = 2;
}

message UpdateFavoriteCountRsp {
  CommonResponse common_rsp = 1;
}
// *******************



// *******************
message UpdateCommentCountReq {
  int64 video_id = 1;
  int64 action_type = 2;
}

message UpdateCommentCountRsp {
  CommonResponse common_rsp = 1;
}
// *******************



// *******************
message GetFavoriteVideoListReq {
  int64 user_id = 1;
}

message GetFavoriteVideoListRsp {
  repeated VideoInfo video_list = 1; // 用户收藏的视频列表
}
// *******************


// *******************
message GetPublishVideoListRequest {
  int64 user_id = 1;
  string token = 2;
}

message GetPublishVideoListResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated  Video video_list = 3;
}
// *******************


// *******************
message PublishVideoRequest {
  int64 userId = 1;
  string saveFile = 2;
  string title = 3;
}

message PublishVideoResponse {
  int32 status_code = 1;
  string status_msg = 2;
}
// *******************



// *******************
message GetFeedListRequest {
  int64 latest_time = 1;
  int64 userId = 2; // 解析token返回userID来判断当前用户状态
}

message GetFeedListResponse {
  int32 status_code = 1;
  string status_msg = 2;
  repeated VideoInfo video_list = 3;
  int64 next_time = 4;
}

message DouyinFeedResponse{
  int32 status_code = 1;
  string status_msg = 2;
  repeated  Video video_list = 3;
  int64 next_time = 4;
}
// *******************



// *******************
message GetVideoInfoListReq {
  repeated int64 video_id = 1;
}

message GetVideoInfoListRsp {
  repeated VideoInfo video_info_list = 2;
}
// *******************